force-app/main/default/objects/Horse__c/Horse__c.object-meta.xml
<CustomObject>
    <description>This represents an individual Horse.</description>
    <label>Horse</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>Horse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Horses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>