force-app/main/default/objects/Horse__c/fields/APHA__c.field-meta.xml
<CustomField>
    <fullName>APHA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APHA</label>
    <type>Checkbox</type>
</CustomField>