force-app/main/default/objects/Horse__c/fields/APHC__c.field-meta.xml
<CustomField>
    <fullName>APHC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APHC</label>
    <type>Checkbox</type>
</CustomField>