force-app/main/default/objects/Horse__c/fields/AQHA__c.field-meta.xml
<CustomField>
    <fullName>AQHA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AQHA</label>
    <type>Checkbox</type>
</CustomField>