force-app/main/default/objects/Horse__c/fields/Dam__c.field-meta.xml
<CustomField>
    <fullName>Dam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dam</label>
    <referenceTo>Horse__c</referenceTo>
    <relationshipLabel>Progeny (Dam)</relationshipLabel>
    <relationshipName>Progeny_Dam</relationshipName>
    <type>Lookup</type>
</CustomField>