force-app/main/default/objects/Horse__c/fields/Date_Foaled__c.field-meta.xml
<CustomField>
    <fullName>Date_Foaled__c</fullName>
    <label>Date Foaled</label>
    <type>Date</type>
</CustomField>