force-app/main/default/objects/Horse__c/fields/IsCompeting__c.field-meta.xml
<CustomField>
    <fullName>IsCompeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Competing</label>
    <type>Checkbox</type>
</CustomField>