force-app/main/default/objects/Horse__c/fields/Other_Breed_Association__c.field-meta.xml
<CustomField>
    <fullName>Other_Breed_Association__c</fullName>
    <label>Other Breed Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>