force-app/main/default/objects/Horse__c/fields/Sire__c.field-meta.xml
<CustomField>
    <fullName>Sire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sire</label>
    <referenceTo>Horse__c</referenceTo>
    <relationshipLabel>Progeny (Sire)</relationshipLabel>
    <relationshipName>Progeny</relationshipName>
    <type>Lookup</type>
</CustomField>