force-app/main/default/objects/Horse__c/fields/TB__c.field-meta.xml
<CustomField>
    <fullName>TB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TB</label>
    <type>Checkbox</type>
</CustomField>